--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 
 header {
     /* background-color: #BBBBBB; */
-    padding: 6px 0;
+    padding: 15px 0;
 }
 
 .caja {
@@ -22,4 +22,59 @@ header {
 .titulo {
     font-size: 22px;
     font-weight: bold;
+    color: #0A3871;
+}
+
+.principal {
+    height: 80vh;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 20px 20px 55px;
+}
+
+.mensaje-usuario {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;   
+}
+
+.botones {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.boton {
+    width: 300px;
+    height: 60px;
+    border-radius: 25px;
+    font-size: 17px;
+}
+
+.boton:first-child {
+    background: #0A3871;
+    color: #fff;
+    border: none;
+}
+
+.boton:first-child:hover {
+    background: #072B61;
+}
+
+.boton:last-child {
+    border: 1px solid #0A3871;
+    color: #0A3871;
+}
+
+.boton:last-child:hover {
+    cursor: pointer;
+    background: #EFF1FA;
+}
+
+.mensaje-encriptado {
+    width: 410px;
+    height: 450px;
+    border: 1px solid #000;
+    border-radius: 25px;
 }
