--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
 }
 
 .principal {
+    position: relative;
     height: 80vh;
     display: flex;
     justify-content: end;
@@ -145,4 +146,28 @@ header {
     font-weight: bold;
     color: #072B61;
     line-height: 1.3em;
+}
+
+.mensaje-encriptado button {
+    margin: auto;
+    width: 150px;
+    height: 40px;
+    margin-top: 350px;
+}
+
+.portapapeless {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    border-radius: 25px;
+    background-color: #072B61;
+}
+
+.portapapeless p {
+    color: #fff;
+    margin-top: 20px;
+    margin-left: 20px;
+    font-size: 17px;
+    font-weight: bold;
 }
