--- a/style.css
+++ b/style.css
@@ -1,173 +1,236 @@
-body{
-    font-family: 'Montserrat', sans-serif;
-    background-color: #e9edf1;
+body {
+  font-family: "Montserrat", sans-serif;
+  background-color: #e9edf1;
 }
 
 header {
-    /* background-color: #BBBBBB; */
-    padding: 20px 0;
+  /* background-color: #BBBBBB; */
+  padding: 20px 0;
 }
 
 .caja {
-    width: 59.5%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  width: 59.5%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
-    margin-left: 40px;
-    width: 25px;
+  margin-left: 40px;
+  width: 25px;
 }
 
 .titulo {
-    font-size: 30px;
-    font-weight: bold;
-    color: #0A3871;
+  font-size: 30px;
+  font-weight: bold;
+  color: #0a3871;
 }
 
 .principal {
-    position: relative;
-    height: 80vh;
-    display: flex;
-    justify-content: end;
-    gap: 50px;
-    padding: 20px 45px 20px 0;
+  position: relative;
+  height: 80vh;
+  display: flex;
+  justify-content: end;
+  gap: 50px;
+  padding: 20px 45px 20px 0;
 }
 
 .mensaje-usuario {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;   
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 #mensajeIngresado {
-    resize: none;
-    height: 295px;
-    width: 560px;
-    border: none;
-    font-size: 20px;
-    padding: 20px;
-    background-color: #e9edf1;
+  resize: none;
+  height: 295px;
+  width: 560px;
+  border: none;
+  font-size: 20px;
+  padding: 20px;
+  background-color: #e9edf1;
 }
 
 #mensajeIngresado::placeholder {
-    font-size: 20px;
-    color: #072B61;
+  font-size: 20px;
+  color: #072b61;
 }
 
 .caja2 {
-    width: 600px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
+  width: 600px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .mensaje-letras {
-    display: flex;
+  display: flex;
 }
 
 .mensaje-letras p {
-    font-size: 13px;
-    font-weight: bold;
-    color: #a1a1a1;
-    margin-left: 6px;
-    display: flex;
-    align-items: center;
+  font-size: 13px;
+  font-weight: bold;
+  color: #a1a1a1;
+  margin-left: 6px;
+  display: flex;
+  align-items: center;
 }
 
 #exclamacion {
-    width: 20px;
-    height: 20px;
+  width: 20px;
+  height: 20px;
 }
 
 .botones {
-    margin-top: 18px;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+  margin-top: 18px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .boton {
-    width: 300px;
-    height: 60px;
-    border-radius: 25px;
-    font-size: 17px;
+  width: 300px;
+  height: 60px;
+  border-radius: 25px;
+  font-size: 17px;
 }
 
 .boton:first-child {
-    background: #0A3871;
-    color: #fff;
-    border: none;
+  background: #0a3871;
+  color: #fff;
+  border: none;
 }
 
 .boton:first-child:hover {
-    background: #072B61;
+  background: #072b61;
 }
 
 .boton:last-child {
-    border: 1px solid #0A3871;
-    color: #0A3871;
+  border: 1px solid #0a3871;
+  color: #0a3871;
 }
 
 .boton:last-child:hover {
-    cursor: pointer;
-    background: #EFF1FA;
+  cursor: pointer;
+  background: #eff1fa;
 }
 
 .mensaje-encriptado {
-    background-color: #fff;
-    width: 380px;
-    border-radius: 25px;
-    text-align: center;
-    padding: 10px 20px;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  width: 380px;
+  border-radius: 25px;
+  text-align: center;
+  padding: 10px 20px;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
 }
 
 .mensaje-encriptado img {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .mensaje-encriptado h2 {
-    margin-top: 15px;
-    font-weight: bold;
-    font-size: 25px;
+  margin-top: 15px;
+  font-weight: bold;
+  font-size: 25px;
 }
 
-.mensaje-indicacion p:first-child {
-    margin-top: 30px;
+.mensaje-indicacion p {
+  text-align: center;
+  margin-top: 30px;
 }
 
-.mensaje-indicacion p:last-child {
+/* .mensaje-indicacion p:last-child {
     margin-top: 10px;
     text-align: left;
     font-weight: bold;
     color: #072B61;
     line-height: 1.3em;
-}
-
-.mensaje-encriptado button {
-    margin: auto;
-    width: 150px;
-    height: 40px;
-    margin-top: 350px;
-}
+} */
 
 .portapapeless {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    border-radius: 25px;
-    background-color: #072B61;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  border-radius: 25px;
+  background-color: #072b61;
 }
 
 .portapapeless p {
-    color: #fff;
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 17px;
-    font-weight: bold;
+  color: #fff;
+  margin-top: 20px;
+  margin-left: 20px;
+  font-size: 17px;
+  font-weight: bold;
 }
+
+.caja-textoFormateado {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.ocultar {
+    display: none;
+}
+
+.caja-textoFormateado textarea {
+  margin-top: 10px;
+  width: 380px;
+  height: 340px;
+  font-size: 17px;
+  font-weight: bold;
+  color: #072b61;
+  line-height: 1.3em;
+  resize: none;
+  border: none;
+  outline: none;
+}
+
+.caja-textoFormateado button {
+    margin-top: 20px;
+  width: 200px;
+  height: 50px;
+}
+
+/* @media screen and (max-width: 768px) {
+  .principal {
+    flex-direction: column;
+    padding: 20px;
+    height: 90vh;
+  }
+
+  #mensajeIngresado {
+    width: 690px;
+    height: 500px;
+    outline: none;
+  }
+
+  .caja2 {
+    width: 100%;
+    position: relative;
+  }
+
+  .botones {
+    width: 100%;
+    gap: 60px;
+  }
+
+  .boton {
+    width: 332px;
+  }
+
+  .mensaje-encriptado {
+    width: 690px;
+  }
+
+  
+
+  .mensaje-indicacion h2 {
+    font-weight: bold;
+  }
+} */
