--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ header {
   height: 50px;
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
   #mensajeIngresado {
     height: 500px;
   }
