--- a/style.css
+++ b/style.css
@@ -122,6 +122,9 @@ header {
   width: 380px;
   border-radius: 25px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 10px 20px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
 }
@@ -185,7 +188,7 @@ header {
 }
 
 .caja-textoFormateado button {
-  margin-top: 20px;
+  margin-top: 60px;
   width: 200px;
   height: 50px;
 }
@@ -194,10 +197,8 @@ header {
   #mensajeIngresado {
     height: 500px;
   }
-  .mensaje-encriptado {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  .caja-textoFormateado textarea {
+    height: 570px;
   }
 }
 
@@ -251,6 +252,7 @@ header {
   }
 
   .caja-textoFormateado button {
+    margin-top: 10px;
     width: 100%;
     height: 60px;
   }
