--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 10px 20px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
 }
